Adding image generation on narration (#731)
