# rest-narration/openapi-schema.yml
@@ -65,6 +65,37 @@ paths:
               examples:
                 hello_success:
                   value: Hello Narration Resource
+  /api/narration/image:
+    post:
+      tags:
+      - narration
+      summary: Generate an image from a narration
+      requestBody:
+        content:
+          text/plain:
+            schema:
+              type: string
+            examples:
+              narration_success:
+                value: This is your fight narration!
+        required: true
+      responses:
+        "200":
+          description: An image from a narration
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/FightImage'
+              examples:
+                image:
+                  value:
+                    imageUrl: https://somewhere.com/someimage.png
+                    imageNarration: This is an alternate narration generated by the
+                      model based on the original narration
+        "400":
+          description: Invalid (or missing) narration
+        "501":
+          description: If running with the azure-openai profile
 components:
   schemas:
     Fight:
@@ -91,6 +122,14 @@ components:
           type: string
         location:
           $ref: '#/components/schemas/FightLocation'
+    FightImage:
+      description: The generated image from the narration
+      type: object
+      properties:
+        imageUrl:
+          type: string
+        imageNarration:
+          type: string
     FightLocation:
       description: Location of a fight
       type: object
